--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,22 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TitleTexStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/titleTextColor</item>
+        <item name="fontFamily">@font/aileron_semibold</item>
+    </style>
+
+    <style name="SubtitleTexStyle">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/subTitleTextColor</item>
+        <item name="fontFamily">@font/aileron_regular</item>
+    </style>
+
+    <style name="NormalTexStyle">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/subTitleTextColor</item>
+        <item name="fontFamily">@font/aileron_thin</item>
+    </style>
+
 </resources>
